@@ -115,7 +115,7 @@ if test "$GCC" = "yes" -a "$set_more_warnings" != "no"; then
 	-Wsign-compare \
 	$CFLAGS"
 
-	for option in -Wsign-promo -Wno-sign-compare; do
+	for option in -Wno-sign-compare; do
 		SAVE_CFLAGS="$CFLAGS"
 		CFLAGS="$option $CFLAGS"
 		AC_MSG_CHECKING([whether gcc understands $option])
