@@ -47,6 +47,7 @@ int		gam_send_event		(GamConnDataPtr conn,
 					 int event,
 					 const char *path,
 					 int len);
+void		gam_connections_debug	(void);
 #ifdef __cplusplus
 }
 #endif
